courseware/labs/lab-13-ingress-routing/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcna-lab13
  labels:
    kcna.tertiaryinfotech.com/lab: "lab-13"
    kcna.tertiaryinfotech.com/day: "3"
    app.kubernetes.io/part-of: meridian-freight
