courseware/labs/lab-13-ingress-routing/manifests/35-pod-net-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-client
  namespace: kcna-lab13
  labels:
    app: net-client
    role: diagnostics
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: shell
      image: busybox:1.36
      command: ["sleep", "7200"]
      securityContext:
        allowPrivilegeEscalation: false
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 200m
          memory: 128Mi
  restartPolicy: Never
